--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.signin">
+    package="com.assoftek.splashscreen">
 
     <application
         android:allowBackup="true"
@@ -8,15 +8,31 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SignIn">
-        <activity android:name=".SecondActivity"></activity>
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name=".HomeActivity.HomeActivity"></activity>
+        <activity android:name=".Login.login" />
+        <activity android:name=".SignUp.Otp_verify" />
+        <activity android:name=".SignUp.User_Detail" />
+        <activity android:name=".Onboarding.Screen_4" />
+        <activity android:name=".Onboarding.Screen_3" />
+        <activity android:name=".Onboarding.Screen_2" />
+        <activity android:name=".Onboarding.Screen_1" />
+        <activity android:name=".SignUp.SignUp" />
+        <activity android:name=".Screen_4.Screen_4" />
+        <activity android:name=".Screen_3.Screen_3" />
+        <activity android:name=".Screen_2.Screen_2" />
+        <activity android:name=".Screen1.Screen_1" />
+        <activity android:name=".Splash_Screen.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
