--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.assoftek.splashscreen">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Derive Capital"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -18,10 +20,6 @@
         <activity android:name=".Onboarding.Screen_2" />
         <activity android:name=".Onboarding.Screen_1" />
         <activity android:name=".SignUp.SignUp" />
-        <activity android:name=".Screen_4.Screen_4" />
-        <activity android:name=".Screen_3.Screen_3" />
-        <activity android:name=".Screen_2.Screen_2" />
-        <activity android:name=".Screen1.Screen_1" />
         <activity android:name=".Splash_Screen.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
