--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity.HomeActivity"></activity>
+        <activity android:name=".WealthActivity"></activity>
+        <activity android:name=".DashboardActivity" />
+        <activity android:name=".HomeActivity.HomeActivity" />
         <activity android:name=".Login.login" />
         <activity android:name=".SignUp.Otp_verify" />
         <activity android:name=".SignUp.User_Detail" />
