--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        flatDir{
+            dirs 'libs'
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
