--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PaymentsActivity"></activity>
-        <activity android:name=".WealthActivity" />
+        <activity android:name=".WealthActivity"></activity>
         <activity android:name=".DashboardActivity" />
+        <activity android:name=".CashScreenActivity"/>
         <activity android:name=".HomeActivity.HomeActivity" />
         <activity android:name=".Login.login" />
         <activity android:name=".SignUp.Otp_verify" />
@@ -37,9 +37,6 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-        <meta-data
-            android:name="com.razorpay.Apikey"
-            android:value="rzp_test_EntPO95sG7KvMb" />
     </application>
 
 </manifest>
