--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'androidx.browser:browser:1.0.0'
     implementation 'com.airbnb.android:lottie:3.7.0'
     implementation 'com.razorpay:checkout:1.6.6'
+    implementation 'com.twitter.sdk.android:twitter:3.1.1'
 
 
 }
