--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 05 22:31:58 IST 2021
-sdk.dir=C\:\\Users\\Anand\\AppData\\Local\\Android\\Sdk
+#Fri May 07 21:30:02 IST 2021
+sdk.dir=C\:\\Users\\Prashant\\AppData\\Local\\Android\\Sdk
