Some bugs fixed

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri May 07 21:30:02 IST 2021
-sdk.dir=C\:\\Users\\Prashant\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Anand\\AppData\\Local\\Android\\Sdk
