--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 05 22:31:58 IST 2021
-sdk.dir=C\:\\Users\\ayush\\AppData\\Local\\Android\\Sdk
+#Wed May 12 10:52:32 IST 2021
+sdk.dir=C\:\\Users\\Deven\\AppData\\Local\\Android\\Sdk
