--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed May 12 18:46:47 IST 2021
-sdk.dir=C\:\\Users\\Deven\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Prashant\\AppData\\Local\\Android\\Sdk
