--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.7.0'
     implementation 'com.razorpay:checkout:1.6.6'
     implementation 'com.twitter.sdk.android:twitter:3.1.1'
+
+    //pin view
+    implementation 'com.chaos.view:pinview:1.4.3'
 }
