--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 12 18:46:47 IST 2021
-sdk.dir=C\:\\Users\\Prashant\\AppData\\Local\\Android\\Sdk
+#Thu May 20 20:58:32 IST 2021
+sdk.dir=C\:\\Users\\hites\\AppData\\Local\\Android\\Sdk
