--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 22 23:31:00 IST 2021
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+#Thu May 27 10:40:57 IST 2021
+sdk.dir=C\:\\Users\\Aryan\\AppData\\Local\\Android\\Sdk
