--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 01 18:08:55 IST 2021
-sdk.dir=C\:\\Users\\hites\\AppData\\Local\\Android\\Sdk
+#Tue Jun 01 10:10:40 IST 2021
+sdk.dir=C\:\\Users\\ayush\\AppData\\Local\\Android\\Sdk
