--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 01 10:10:40 IST 2021
-sdk.dir=C\:\\Users\\ayush\\AppData\\Local\\Android\\Sdk
+#Thu Jun 03 14:52:04 IST 2021
+sdk.dir=D\:\\Users\\Binit-HP\\AppData\\Local\\Android\\Sdk
