user profile data storage

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 07 14:06:12 IST 2021
-sdk.dir=C\:\\Users\\KARTHIK REDDY\\AppData\\Local\\Android\\Sdk
+#Tue Jun 08 10:53:42 IST 2021
+sdk.dir=C\:\\Users\\Aryan\\AppData\\Local\\Android\\Sdk
