--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".loginpage"></activity>
+        <activity android:name=".pricing"></activity>
+        <activity android:name=".newscreen3_dark" />
+        <activity android:name=".newscreen3" />
+        <activity android:name=".screen1_dark" />
+        <activity android:name=".screen1" />
+        <activity android:name=".loginpage" />
         <activity android:name=".welcome_screen" />
         <activity android:name=".SignUp.UserProfileActivity" />
         <activity android:name=".SignUp.UserEducationActivity" />
