--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 08 10:53:42 IST 2021
-sdk.dir=C\:\\Users\\Aryan\\AppData\\Local\\Android\\Sdk
+#Thu Jun 10 13:03:57 IST 2021
+sdk.dir=C\:\\Users\\hites\\AppData\\Local\\Android\\Sdk
