--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".screen3Black"></activity>
+        <activity android:name=".newscreenblack"></activity>
+        <activity android:name=".NewScreen" />
+        <activity android:name=".screen3Black" />
         <activity android:name=".loginpage" />
         <activity android:name=".welcome_screen" />
         <activity android:name=".SignUp.UserProfileActivity" />
