--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.assoftek.splashscreen">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".screen3Black"></activity>
+        <activity android:name=".autopilot_white"></activity>
+        <activity android:name=".autopilot_black" />
+        <activity android:name=".Financial_black" />
+        <activity android:name=".financial_white" />
+        <activity android:name=".security_white" />
+        <activity android:name=".scurity_black" />
+        <activity android:name=".screen3Black" />
         <activity android:name=".loginpage" />
         <activity android:name=".welcome_screen" />
         <activity android:name=".SignUp.UserProfileActivity" />
@@ -41,5 +45,7 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
