--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed May 12 18:46:47 IST 2021
-sdk.dir=C\:\\Users\\Prashant\\AppData\\Local\\Android\\Sdk
+#Sat Jun 12 13:20:35 IST 2021
+sdk.dir=D\:\\Users\\Binit-HP\\AppData\\Local\\Android\\Sdk
