--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,29 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".screen3Black"></activity>
+        <activity android:name=".screen3Black"/>
         <activity android:name=".loginpage" />
         <activity android:name=".welcome_screen" />
-        <activity android:name=".SignUp.UserProfileActivity" />
-        <activity android:name=".SignUp.UserEducationActivity" />
-        <activity android:name=".SignUp.PhoneActivity" />
         <activity android:name=".WealthActivity" />
         <activity android:name=".DashboardActivity" />
         <activity android:name=".CashScreenActivity" />
         <activity android:name=".HomeActivity.HomeActivity" />
-        <activity android:name=".Login.login" />
-        <activity android:name=".SignUp.Otp_verify" />
-        <activity android:name=".SignUp.User_Detail" />
-        <activity android:name=".Onboarding.OnBoardingScreen" />
-        <activity android:name=".SignUp.SignUp" />
-        <activity android:name=".Splash_Screen.MainActivity">
+        <activity android:name=".Onboarding.OnBoardingScreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
