--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jun 12 15:06:39 IST 2021
-sdk.dir=D\:\\Users\\Binit-HP\\AppData\\Local\\Android\\Sdk
+#Sun Jun 13 13:33:53 IST 2021
+sdk.dir=C\:\\Users\\Aryan\\AppData\\Local\\Android\\Sdk
