--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 10 13:03:57 IST 2021
-sdk.dir=C\:\\Users\\hites\\AppData\\Local\\Android\\Sdk
+#Mon Jun 14 15:22:50 IST 2021
+sdk.dir=C\:\\Users\\KARTHIK REDDY\\AppData\\Local\\Android\\Sdk
