signup error resolved--ayush

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Jun 12 15:06:39 IST 2021
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\ayush\\AppData\\Local\\Android\\Sdk
