--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jun 12 15:06:39 IST 2021
-sdk.dir=C\:\\Users\\ayush\\AppData\\Local\\Android\\Sdk
+#Tue Jun 15 13:38:31 IST 2021
+sdk.dir=C\:\\Users\\Aryan\\AppData\\Local\\Android\\Sdk
+ndk.dir=C\:\\Users\\Aryan\\AppData\\Local\\Android\\Sdk\\ndk\\21.0.6113669
