--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     testImplementation 'junit:junit:4.13.2'
-    implementation 'com.facebook.android:facebook-android-sdk:5.15.3'
+    implementation 'com.facebook.android:facebook-android-sdk:11.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -63,7 +63,7 @@ dependencies {
     implementation 'com.scottyab:aescrypt:0.0.1'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.airbnb.android:lottie:3.7.0'
-    implementation 'com.razorpay:checkout:1.6.6'
+    implementation 'com.razorpay:checkout:1.6.10'
     implementation 'com.twitter.sdk.android:twitter:3.1.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
 
@@ -73,13 +73,17 @@ dependencies {
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.23'
 
 
-    implementation  'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //Room Database
     implementation "androidx.room:room-runtime:2.3.0"
     annotationProcessor "androidx.room:room-compiler:2.3.0"
+
+
+    implementation 'com.chaos.view:pinview:1.4.3'
+    implementation 'com.google.android.material:material:1.4.0-rc01'
 
 }
