--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,26 +11,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".screen3Black"/>
-        <activity android:name=".PaymentsActivity"/>
-        <activity android:name=".NotificationActivity"/>
+        <activity android:name=".homePage.HomePage"></activity>
+        <activity android:name=".screen3Black" />
+        <activity android:name=".PaymentsActivity" />
+        <activity android:name=".NotificationActivity" />
         <activity android:name=".loginpage" />
         <activity android:name=".welcome_screen" />
         <activity android:name=".WealthActivity" />
         <activity android:name=".DashboardActivity" />
         <activity android:name=".CashScreenActivity" />
         <activity android:name=".HomeActivity.HomeActivity" />
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".detailsActivity"/>
-        <activity android:name=".UserDetails"/>
-        <activity android:name=".Onboarding.OnBoardingScreen" >
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".detailsActivity" />
+        <activity android:name=".UserDetails" />
+        <activity android:name=".Onboarding.OnBoardingScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
