--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.assoftek.splashscreen">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".pricing"></activity>
+        <activity android:name=".money_better_white"></activity>
+        <activity android:name=".money_better" />
+        <activity android:name=".pricing" />
         <activity android:name=".newscreen3_dark" />
         <activity android:name=".newscreen3" />
         <activity android:name=".screen1_dark" />
@@ -45,5 +45,7 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
