--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 16 14:33:17 IST 2021
-sdk.dir=C\:\\Users\\Aryan\\AppData\\Local\\Android\\Sdk
-ndk.dir=C\:\\Users\\Aryan\\AppData\\Local\\Android\\Sdk\\ndk\\21.0.6113669
+#Mon Jun 21 12:27:03 IST 2021
+sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
