--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 21 12:27:03 IST 2021
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+#Fri Jun 25 15:34:22 IST 2021
+sdk.dir=D\:\\Users\\Binit-HP\\AppData\\Local\\Android\\Sdk
